src/aws/route_tables.tf
resource "aws_route_table" "gambley_private_route_table" {
  vpc_id = aws_vpc.gambley_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.gambley_nat_gateway.id
  }
  tags = {
    "Name"      = "Gambley Private Route Table"
    "Terraform" = "True"
  }
}

resource "aws_route_table" "gambley_public_route_table" {
  vpc_id = aws_vpc.gambley_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gambley_internet_gateway.id
  }
  tags = {
    "Name"      = "Gambley Public Route Table"
    "Terraform" = "True"
  }
}

resource "aws_route_table_association" "gambley_private_route_table_association" {
  subnet_id      = aws_subnet.gambley_subnet_private.id
  route_table_id = aws_route_table.gambley_private_route_table.id
}

resource "aws_route_table_association" "gambley_public_route_table_association" {
  subnet_id      = aws_subnet.gambley_subnet_public.id
  route_table_id = aws_route_table.gambley_public_route_table.id
}
